--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,17 @@
       <version>4.38.0</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-support</artifactId>
+          <version>4.14.1</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-support</artifactId>
+      <version>4.38.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
